--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -1,16 +1,46 @@
-/* .wrapper {
-  position: fixed;
+.header {
+  width: 100%;
+  position: absolute;
   top: 0;
   left: 0;
-  background-color: #e47373;
-  width: 100%;
-  padding: 10px;
+  z-index: 3;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.wrapper {
+  height: 100px;
+  display: flex;
+  align-items: center;
+  gap: 90px;
 }
 
 .link {
-  margin: 5px;
+  color: white;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 16px;
+  letter-spacing: 10%;
+  position: relative;
 }
 
-.red {
-  color: red;
-} */
+.link::after {
+  width: 100%;
+  height: 2px;
+  background-color: white;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  content: '';
+  opacity: 0;
+  transition: 0.2s ease;
+}
+
+.link:hover::after {
+  opacity: 1;
+}
