--- a/client/src/Pages/Login/Login.module.css
+++ b/client/src/Pages/Login/Login.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   min-height: 100vh;
-  padding-top: 250px;
+  padding-top: 350px;
   color: rgba(255, 255, 255, 0.828);
 
   background-image: url('../../assets/images/registerlogo.jpg');
@@ -8,4 +8,8 @@
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+}
+
+.error {
+  min-width: 400px;
 }
