--- a/client/src/components/FavoriteNews/FavoriteNews.module.css
+++ b/client/src/components/FavoriteNews/FavoriteNews.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  padding-top: 200px;
+  padding-top: 150px;
   padding-bottom: 120px;
   min-height: 100vh;
   color: rgba(255, 255, 255, 0.828);
@@ -9,6 +9,19 @@
   background-size: cover;
   position: relative;
 }
+
+.cardInfoWrapper {
+  margin-left: 465px;
+  text-align: center;
+  margin-bottom: 50px;
+  background-color: #121721cc;
+  max-width: 300px;
+  padding: 10px;
+  border-radius: 15px;
+  font-weight: bold;
+}
+
+
 
 .secondWrapper {
   display: flex;
