--- a/client/src/components/PaymentForm/paymentForm.style.css
+++ b/client/src/components/PaymentForm/paymentForm.style.css
@@ -4,18 +4,21 @@
   gap: 15px;
   padding: 20px;
   border: 1px solid #ddd;
-  border-radius: 8px;
-  background-color: #f9f9f9;
-  max-width: 400px;
+  border-radius: 20px;
+  border: none;
+  background-color: #040914;
   margin: 0 auto;
+  width: 400px;
+  height: 250px;
 }
 
 .card-container label {
   display: flex;
   flex-direction: column;
   font-size: 16px;
-  color: #30313d;
-  margin-bottom: 10px;
+  color: rgba(255, 255, 255, 0.845);
+  font-weight: bold;
+  margin-bottom: 15px;
 }
 
 .card-container input {
@@ -25,16 +28,11 @@
   background-color: #fff;
   text-align: center;
   font-size: 14px;
-  font-family:Arial, Helvetica, sans-serif
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .card-element {
   padding: 10px;
-  border: 1px solid #ddd;
   border-radius: 4px;
   background-color: #fff;
-}
-
-button {
-  color: rgb(90, 87, 87);
 }
