--- a/client/src/components/QRScanner/QrCodeScanner.style.css
+++ b/client/src/components/QRScanner/QrCodeScanner.style.css
@@ -1,11 +1,12 @@
 .scanner-video {
   width: 100%;
   max-width: 600px;
-  border: 1px solid #ccc;
+  border: 3px solid #d3f85acf;
 }
 
 .result {
   margin-top: 20px;
+  color: rgba(255, 255, 255, 0.813);
   display: flex;
   align-items: center;
 }
