--- a/client/src/components/Footer/Footer.module.css
+++ b/client/src/components/Footer/Footer.module.css
@@ -6,3 +6,10 @@
   text-align: center;
   height: 120px;
 }
+
+.secondWrapper {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  gap: 10px;
+}
